# context-timer

./: .gitignore  README.md  TODO.md  __main__.py  build-snap.sh  context_timer.py  pyproject.toml  requirements.txt  run.py
.github/: copilot-instructions.md
docs/: DEVELOPMENT.md  TEST_COVERAGE.md  USER_GUIDE.md
snap/: README.md  snapcraft.yaml
snap/gui/: context-timer.desktop
snap/local/: README.md
src/: __init__.py  main.py
src/gui/: __init__.py  main_window.py  preferences_dialog.py  task_dialog.py  timer_widget.py
src/models/: __init__.py  database.py  task.py  timer.py
src/utils/: __init__.py  export.py  time_utils.py
tests/: test_gui.py  test_models.py  test_timer_logic.py  test_utils.py
