[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-timer"
version = "0.1.0"
description = "A desktop application for tracking multiple concurrent task timers and context switches"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Jeffrey Lane", email = "jeffrey.lane@canonical.com"}
]
keywords = ["timer", "productivity", "time-tracking", "context-switching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt6>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
context-timer = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/context-timer"
Repository = "https://github.com/yourusername/context-timer"
Issues = "https://github.com/yourusername/context-timer/issues"

[tool.setuptools]
packages = ["src", "src.gui", "src.models", "src.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
